Issue #338 the table should only get a scrollbar when smaller than the large size.

--- a/themes/custom/ts_wrin/sass/global/_wysiwyg.scss
+++ b/themes/custom/ts_wrin/sass/global/_wysiwyg.scss
@@ -357,7 +357,7 @@
       }
     }
 
-    @include mq($md) {
+    @include mq($lg) {
       display: table;
       max-width: 100%;
     }
